--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -59,6 +59,7 @@
             android:layout_marginTop="@dimen/_30sdp"
             android:background="@drawable/border_radius_edittext"
             android:fontFamily="@font/calibri"
+            android:maxLines="1"
             android:hint="@string/hint_account_pass"
             android:padding="@dimen/_10sdp"
             android:textColor="@color/black"
@@ -68,6 +69,7 @@
             android:id="@+id/edt_password"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
+            android:maxLines="1"
             android:layout_marginTop="@dimen/_10sdp"
             android:background="@drawable/border_radius_edittext"
             android:fontFamily="@font/calibri"
@@ -76,6 +78,16 @@
             android:padding="@dimen/_10sdp"
             android:textColor="@color/black"
             android:textColorHint="@color/color_key" />
+        <com.ctrlplusz.anytextview.AnyTextView
+            android:id="@+id/status_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:visibility="gone"
+            android:fontFamily="@font/calibri"
+            android:text="@string/status_error_login"
+            android:textColor="@color/red"
+            android:textSize="@dimen/_13sdp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_login"
