fix recoment + logout + box search

--- a/app/src/main/res/layout/item_layout_management.xml
+++ b/app/src/main/res/layout/item_layout_management.xml
@@ -74,7 +74,8 @@
                 android:background="@drawable/border_radius_edittext"
                 android:fontFamily="@font/calibri"
                 android:gravity="top|left"
-                android:hint="@string/hint_account_pass"
+                android:padding="@dimen/_5sdp"
+                android:hint="@string/input_feedback"
                 android:maxLines="4"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
