--- a/app/src/main/res/layout/activity_employee.xml
+++ b/app/src/main/res/layout/activity_employee.xml
@@ -9,10 +9,19 @@
 
     <RelativeLayout
         android:id="@+id/layout_notification"
-        android:layout_width="@dimen/_48sdp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginTop="@dimen/_10sdp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_baseline_logout_36" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_notification"
@@ -37,6 +46,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/layout_notification"
         android:orientation="vertical"
         android:padding="@dimen/_20sdp">
 
@@ -213,11 +223,11 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:background="@drawable/border_radius_button"
             android:fontFamily="@font/calibri"
             android:text="@string/manage_job_extra"
             android:textColor="@color/white"
-            android:layout_marginBottom="@dimen/_10sdp"
             android:textSize="@dimen/_16sdp" />
     </LinearLayout>
 
