--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -9,10 +9,19 @@
 
     <RelativeLayout
         android:id="@+id/layout_notification"
-        android:layout_width="@dimen/_48sdp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginTop="@dimen/_10sdp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_baseline_logout_36" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_notification"
@@ -35,6 +44,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:layout_below="@+id/layout_notification"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
