--- a/app/src/main/res/layout/extra_job_layout.xml
+++ b/app/src/main/res/layout/extra_job_layout.xml
@@ -243,11 +243,11 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_done"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
+        android:layout_height="@dimen/_40sdp"
         android:layout_gravity="center_horizontal"
         android:layout_margin="@dimen/_20sdp"
         android:background="@drawable/border_radius_button"
-        android:fontFamily="@font/calibri"
+        android:fontFamily="@font/calibrib"
         android:text="@string/add_job"
         android:textColor="@color/white"
         android:textSize="@dimen/_16sdp" />
