--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -96,11 +96,11 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_list_project"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/_30sdp"
             android:background="@drawable/border_radius_button"
-            android:fontFamily="@font/calibri"
+            android:fontFamily="@font/calibrib"
             android:text="@string/list_project"
             android:textColor="@color/white"
             android:textSize="@dimen/_16sdp" />
@@ -109,11 +109,11 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_input"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/_30sdp"
             android:background="@drawable/border_radius_button"
-            android:fontFamily="@font/calibri"
+            android:fontFamily="@font/calibrib"
             android:text="@string/input_job_extra"
             android:textColor="@color/white"
             android:textSize="@dimen/_16sdp" />
@@ -123,4 +123,16 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
     </LinearLayout>
+
+    <com.ctrlplusz.anytextview.AnyTextView
+        android:id="@+id/txt_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:fontFamily="@font/calibri"
+        android:padding="@dimen/_5sdp"
+        android:text="version: 0.0.1"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_10sdp" />
 </RelativeLayout>
